# MinaSimulator

./: .gitignore  CMakeLists.txt  README.md
data/: bert-base-16.json  bert-base-4.json  bert-large-16.json  bert-large-4.json  opt-1.3b-4.json  opt-125m-16.json  opt-125m-4.json  opt-350m-16.json  opt-350m-4.json  vit-base-16.json  vit-base-4.json  vit-large-16.json  vit-large-4.json
scripts/: visualize_accelerate_effectiveness.py  visualize_cluster_status.py  visualize_job_placement.py  visualize_large_scale_simulation.py  visualize_sharing_policy.py  visualize_tree_building.py  visualize_tree_conflicts.py
src/: allocation_controller.cpp  allocation_controller.hpp  data.cpp  data.hpp  fat_tree.cpp  fat_tree.hpp  fat_tree_resource.cpp  fat_tree_resource.hpp  job.cpp  job.hpp  main.cpp  sharing_group.cpp  sharing_group.hpp
src/experiments/: ablation_study.cpp  accelerate_effectiveness.cpp  experiments.hpp  job_placement.cpp  large_scale_simulation.cpp  sharing.cpp  sharing_overhead.cpp  tree_building.cpp  tree_conflicts.cpp
src/host_allocation_policies/: first.cpp  first.hpp  random.cpp  random.hpp  smart.cpp  smart.hpp
src/sharing_policies/: greedy.cpp  greedy.hpp  non_sharp.hpp  smart.cpp  smart.hpp
src/tree_building_policies/: first.cpp  first.hpp  none.hpp  random.cpp  random.hpp  smart.cpp  smart.hpp
src/utils/: graph.cpp  graph.hpp  mis_solver.cpp  mis_solver.hpp  parallel.hpp  trace.cpp  trace.hpp  union_find.cpp  union_find.hpp
